# mcp-western-astrology

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  server.json  server.py
divineapi_western_astrology_mcp/: __init__.py  server.py
